refactor(plc4j/codegen): remove IO classes